# outstagram

./: README.md  db.sqlite3  pyproject.toml
.config_secret/: secret.json
config/: asgi.py  settings.py  urls.py
members/: admin.py  forms.py  models.py  oauth_views.py  urls.py  views.py
members/migrations/: 0001_initial.py
post/: comment_views.py
templates/: base.html
templates/auth/: signup.html
